# landingpage

./: README.md  ResponsiveLandingPage.html  ResponsiveLandingPage2.html  devdev  pyproject.toml
css/: Nstyles.css  styles.css
js/: dScript.js  defaultScript.js
